# shelved_cache

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  tox.ini
.github/workflows/: cicd.yaml
shelved_cache/: __init__.py  decorators.py  keys.py  persistent_cache.py
tests/: test_decorators.py  test_keys.py  test_persistent_cache.py
