[tool.poetry]
name = "shelved_cache"
version = "0.3.1"
description = "Persistent cache for Python cachetools."
authors = ["Marius Helf <helfsmarius@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/mariushelf/shelved_cache"
repository = "https://github.com/mariushelf/shelved_cache"
documentation = "https://github.com/mariushelf/shelved_cache"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: PyPy"
]

[tool.poetry.dependencies]
python = "^3.7.0,<4"
cachetools = "^4.2.2|^5.0.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.8.0"
pytest = "^7.1.1"
pytest-asyncio = "^0.20.3"
pytest-cov = "^4.0.0"
tox = "^4.4.5"
twine = "^4.0.0"

[tool.isort]
profile = "black"
multi_line_output = 3

[build-system]
requires = ["poetry-core>=1.4"]
build-backend = "poetry.core.masonry.api"

# pytest configuration
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--doctest-modules --doctest-continue-on-failure -rA --cov=shelved_cache --cov-report term --cov-report xml:coverage.xml --junitxml=report.xml"
testpaths = [
    "tests",
    "shelved_cache",
]
